# EventEngine

./: CMakeLists.txt
applications/: CMakeLists.txt  main.cpp
src/EventEngine/: EventLoop.cpp  EventLoop.h  Events.h  Object.cpp  Object.h  ObjectRegistry.cpp  ObjectRegistry.h  Pointer.cpp  Pointer.h  Registry.h
src/EventEngine/private/: Dispatcher.cpp  Dispatcher.h  EventConverter.cpp  EventConverter.h  EventLoopPrivate.cpp  EventLoopPrivate.h  EventRegistry.cpp  EventRegistry.h  MetaRegistering.cpp  MetaRegistering.h
